--- a/css/style.css
+++ b/css/style.css
@@ -189,3 +189,16 @@ tr:hover + .hide {
   background-color: #9fb9db;
   color: white;
 }
+
+.inputt {
+  position: absolute;
+  display: block;
+  top:0;
+  left:0;
+  margin: 0;
+  height: 100%;
+  width: 100%;
+  border: none;
+  padding: 10px;
+  box-sizing: border-box;
+}
